Sun Jan 28 01:51:27 1996  Jim Kingdon

	* config.h: Fix unclosed comment.

Sun Jan 28 00:16:58 1996  Karl Fogel  (kfogel@floss.cyclic.com)

        * filesubr.c (xchmod): rewritten for OS/2.

Sat Jan 27 16:18:20 1996  Karl Fogel  (kfogel@floss.cyclic.com)

        * config.h (CHMOD_BROKEN): define to 1.

        * filesubr.c (rename_file): rename() returns non-zero error codes,
        not necessarily negative.

Fri Jan 26 00:52:12 1996  unknown  (unknown@beezley)

	* filesubr.c (copy_file): Open the file we are writing, not 
	just the one we are reading, in binary mode.

Thu Jan 18 14:53:58 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* Makefile.in (CFLAGS): Don't use +=.  This makefile must be
	portable because it is used on all platforms (e.g. for "make dist").

Thu Jan 11 12:04:42 1996  Norbert Kiesel  <nk@col.sw-ley.de>

	* options.h: remove CVS_NOADMIN

Wed Jan 10 15:56:46 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * options.h, config.h: moved NO_SOCKET_TO_FD definition from
        options.h to config.h, which is where it belongs.

Tue Jan  9 16:43:15 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * run.c (sleep): commented out this definition.
        * config.h: #define sleep() in terms of DosSleep(), unless sleep()
        is defined already.  Normally it's defined in
        tcpip/include/utils.h, however on beezley that definition is
        commented out for some reason.
        Don't prototype sleep().

Tue Jan  9 16:22:35 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* .cvsignore: Add cvs.exe and icc.in.

Tue Jan 09 16:43:59 1996  Jim Kingdon  (kingdon@beezley.cyclic.com)

	* filesubr.c (link_file): New function (copied from
	../windows-NT/filesubr.c)

Fri Jan  5 17:03:09 1996  Karl Fogel  <kfogel@floss.red-bean.com>

        * Makefile.in: "lib_dir", not "libdir", to avoid conflict with
        top-level Makefile.

Mon Jan  1 22:59:46 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>
